--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,19 +1,7 @@
 name: First workflow
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+  workflow_call:
 
 jobs:
-  name-of-job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Hello world
-        shell: bash
-        run: |
-          ls
-      
+  compliance:
+    uses: josepebel/fluffy-workflow/.github/workflows/action.yml@main
