--- a/.github/workflows/dockerworkflow.yml
+++ b/.github/workflows/dockerworkflow.yml
@@ -4,5 +4,5 @@ on:
 
 jobs:
   call-workflow:
-    uses: josepebel/fluffy-workflows/.github/workflows/docker.yml@main
+    uses: josepebel/fluffy-workflows/.github/workflows/docker-node.yml@main
   
